--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-aiohttp = "*"
+httpx = "*"
 pydantic = "*"
 
 [dev-packages]
-flake8 = "*"
 mypy = "*"
+flake8 = "*"
 autopep8 = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
