--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,10 @@
-aiohttp==3.8.1
-
-aiosignal==1.2.0
-
-async-timeout==4.0.2
-
-attrs==21.4.0
-
-charset-normalizer==2.0.12
-
-frozenlist==1.3.0
-
+anyio==3.6.1
+certifi==2022.6.15.1
+h11==0.12.0
+httpcore==0.15.0
+httpx==0.23.0
 idna==3.3
-
-multidict==6.0.2
-
-pydantic==1.9.1
-
-typing-extensions==4.2.0
-
-yarl==1.7.2
+pydantic==1.10.2
+rfc3986[idna2008]==1.5.0
+sniffio==1.3.0
+typing-extensions==4.3.0
