--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ pydantic = "*"
 mypy = "*"
 flake8 = "*"
 autopep8 = "*"
+pytest = "*"
+pytest-asyncio = "*"
 
 [requires]
 python_version = "3.10"
