--- a/.github/workflows/lib-test.yml
+++ b/.github/workflows/lib-test.yml
@@ -15,10 +15,7 @@ jobs:
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
     
-    env:
-      API_TOKEN: ${{ secrets.API_TOKEN }}
-      APP_NAME: ${{ secrets.APP_NAME }}
-      APP_ID: ${{ secrets.APP_ID }}
+    environment: development
 
     steps:
       - uses: actions/checkout@v3
