--- a/.github/workflows/lib-test.yml
+++ b/.github/workflows/lib-test.yml
@@ -32,6 +32,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Install dev dependencies
+        run: |
+          if [ -f dev-requirements.txt ]; then pip install -r dev-requirements.txt; fi
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
