--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ flake8 = "*"
 autopep8 = "*"
 pytest = "*"
 pytest-asyncio = "*"
+fastapi = "*"
+uvicorn = "*"
 
 [requires]
 python_version = "3.10"
