--- a/.github/workflows/lib-test.yml
+++ b/.github/workflows/lib-test.yml
@@ -11,9 +11,6 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.10"]
     
     environment: development
     env: 
@@ -23,18 +20,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+          python-version: 3.10
+      - name: Install pipenv & dependecies
         run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Install dev dependencies
-        run: |
-          if [ -f dev-requirements.txt ]; then pip install -r dev-requirements.txt; fi
+          python -m pip install pipenv
+          pipenv install -d
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
