--- a/.github/workflows/lib-test.yml
+++ b/.github/workflows/lib-test.yml
@@ -10,10 +10,10 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: ["3.6.7", "3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
     
     environment: development
     env: 
