--- a/.github/workflows/lib-test.yml
+++ b/.github/workflows/lib-test.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.8.1", "3.9", "3.10"]
     
     environment: development
     env: 
@@ -27,19 +27,18 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install pipenv & dependecies
+          cache: 'poetry'
+      - name: Install poetry
         run: |
-          python -m pip install pipenv
-          pipenv install -d
+          python -m pip install poetry
+      - name: Install dependencies
+          poetry install
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
-          pipenv run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          pipenv run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Install library
-        run: |
-          pipenv run python -m pip install ./
+          poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pipenv run pytest
+          poetry run pytest tests/
