--- a/.github/workflows/lib-test.yml
+++ b/.github/workflows/lib-test.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           python -m pip install poetry
       - name: Install dependencies
-          poetry install
+        run: poetry install
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
