Build docs on push to master branch

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -2,6 +2,8 @@ name: Build Documentation
 on:
   release:
     types: [published]
+  push:
+    branches: [ master ]
 
 permissions:
   contents: write
