Fix lost mkdocs executable in build-docs

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Install dependencies
         run: poetry install
       - name: Build and publish documentation
-        run: mkdocs gh-deploy --force
+        run: poetry run mkdocs gh-deploy --force
