--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,14 +35,13 @@ uvicorn = "^0.20.0"
 bumpver = "^2022.1120"
 mkdocs-material = "^8.5.11"
 mkdocs-git-revision-date-localized-plugin = "^1.1.0"
-mkdocs-git-committers-plugin-2 = "^1.1.1"
 mkdocs-git-authors-plugin = "^0.7.0"
+mkdocs-git-committers-plugin-2 = { git = "https://github.com/LulzLoL231/mkdocs-git-committers-plugin-2.git", tag = "v1.1.2" }
 mkdocstrings = {extras = ["python"], version = "^0.19.1"}
 mkdocs-glightbox = "^0.3.1"
 mkdocs-literate-nav = "^0.5.0"
-mkdocs-gen-files = "^0.4.0"
 mkdocs-section-index = "^0.3.4"
-mkdocs-static-i18n = "^0.53"
+mkdocs-static-i18n = { git = "https://github.com/LulzLoL231/mkdocs-static-i18n.git", tag = "v0.54" }
 lxml = "^4.9.2"
 
 [build-system]
